--- a/requirements.txt
+++ b/requirements.txt
@@ -58,6 +58,7 @@ pydeck==0.8.1b0
 Pygments==2.17.2
 pypdf==3.17.4
 python-dateutil==2.8.2
+python-dotenv==1.0.1
 pytz==2023.3.post1
 PyYAML==6.0.1
 referencing==0.32.1
